--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Compiled class file
 *.class
+classes/
 
 # Log file
 *.log
@@ -22,3 +23,12 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# generated files
+target/
+
+# eclipse files
+.project
+.classpath
+.settings/
+
