--- a/pom.xml
+++ b/pom.xml
@@ -67,5 +67,14 @@
         <version>1.3.14</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.10.1</version>
+        <scope>test</scope>
+    </dependency>
+
+
   </dependencies>
 </project>
