--- a/pom.xml
+++ b/pom.xml
@@ -72,31 +72,14 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>3.1.0</version>
-        <executions>
-          <execution>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <target>
-                <!-- Create CantoVisitor alias for backward compatibility -->
-                <echo file="target/generated-sources/antlr4/canto/parser/CantoVisitor.java">// Generated alias for backward compatibility
-package canto.parser;
-
-/**
- * Alias for CantoParserBaseVisitor to maintain backward compatibility.
- * This allows existing code to extend CantoVisitor instead of CantoParserBaseVisitor.
- */
-public class CantoVisitor&lt;T&gt; extends CantoParserBaseVisitor&lt;T&gt; {
-    // This class extends CantoParserBaseVisitor without adding new methods
-}</echo>
-              </target>
-            </configuration>
-          </execution>
-        </executions>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+        <configuration>
+          <includes>
+            <include>**/*Test.java</include>
+            <include>**/*Tests.java</include>
+          </includes>
+        </configuration>
       </plugin>
     </plugins>
   </build>
@@ -124,11 +107,37 @@ public class CantoVisitor&lt;T&gt; extends CantoParserBaseVisitor&lt;T&gt; {
         <version>1.3.14</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+    <!-- JUnit 5 Testing Dependencies -->
     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
         <version>5.10.1</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.10.1</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-params</artifactId>
+        <version>5.10.1</version>
+        <scope>test</scope>
+    </dependency>
+    <!-- AssertJ for fluent assertions -->
+    <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>3.24.2</version>
+        <scope>test</scope>
+    </dependency>
+    <!-- Mockito for mocking -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>5.8.0</version>
         <scope>test</scope>
     </dependency>
 
